# discord-ipc

./: Cargo.toml  README.md  refresh_token
examples/: basic.rs
secret-server/: Cargo.toml  secrets.json
secret-server/src/: main.rs
src/: activity.rs  channel.rs  client.rs  command.rs  discord.rs  ipc.rs  lib.rs  oauth.rs  payload.rs  voice.rs
src/connection/: base.rs  manager.rs
src/models/: message.rs  mod.rs  payload.rs
src/platform/: mod.rs  unix.rs  windows.rs
