[package]
authors     = ["Matthew Pomes <matthew.pomes@pm.me>"]
name        = "discord-ipc"
description = "A Rust client for Discord IPC."
keywords    = ["discord", "rpc", "ipc"]
license     = "MIT"
readme      = "README.md"
version     = "0.0.0"

[features]
default = []
all = ["rich_presence", "voice", "messages"]
rich_presence = []
voice = []
messages = []

[dependencies]
serde        = "^1.0"
serde_derive = "^1.0"
serde_json   = "^1.0"
byteorder    = "^1.0"
log          = "~0.4"
bytes        = "^0.4"
parking_lot  = "^0.7"
crossbeam-channel = "^0.3"

[target.'cfg(windows)'.dependencies]
named_pipe   = "0.3.0"

[dependencies.uuid]
version  = "^0.6.2"
features = ["v4"]

[dev-dependencies]
simplelog = "~0.5"
