[package]
edition = "2021"
authors     = ["Matthew Pomes <matthew.pomes@pm.me>"]
name        = "discord-ipc"
description = "A Rust client for Discord IPC."
keywords    = ["discord", "rpc", "ipc"]
license     = "MIT"
readme      = "README.md"
version     = "0.0.0"

[features]
default = []

[dependencies]
serde        = { version = "*", features = ["derive"] }
serde_repr   = "*"
serde_json   = "^1.0"
chrono       = { version = "0.4.23", features = ["serde"] }
thiserror    = "1.0.38"
bitfield     = "0.14.0"
async-trait  = "*"
tokio        = { version = "1.24.2", features = ["net", "io-util"] }

log          = "~0.4"

[dev-dependencies]
simplelog = "~0.5"
tokio        = { version = "1.24.2", features = ["net", "io-util", "rt", "macros", "time"] }
